--- a/readme
+++ b/readme
@@ -1,315 +1,221 @@
-# README API TODO List dengan Autentikasi (Login & Register)
-Ini adalah RESTful API yang dibangun dengan Node.js dan Express.js yang menyediakan autentikasi pengguna (login dan registrasi) serta manajemen daftar tugas pribadi. Autentikasi ditangani menggunakan JWT (JSON Web Tokens).
+# 📝 TODO List API with Authentication (Login & Register)
 
-## Table of Contents
-
-1. [Installation & Setup](#installation--setup)
-2. [Authentication](#authentication)
-    - [Register](#register)
-    - [Login](#login)
-3. [TODO](#TODO)
-    - [Create TODO](#create-to-do)
-    - [Get TODO List](#get-to-do-list)
-    - [Get Single TODO](#get-single-to-do)
-    - [Update TODO](#update-to-do)
-    - [Delete TODO](#delete-to-do)
-    - [Delete All TODO](#delete-all-to-do)
-
+A RESTful API built with **Node.js** and **Express.js** that provides user authentication (login & registration) and personal task management. Authentication is handled using **JWT (JSON Web Tokens)**.
 
 ---
 
-## Installation & Setup
+## 📌 Table of Contents
 
-### Prerequisites
+1. [🚀 Installation & Setup](#-installation--setup)
+2. [🔐 Authentication](#-authentication)
+   - [📝 Register](#-register)
+   - [🔑 Login](#-login)
+3. [✅ TODO Management](#-todo-management)
+   - [➕ Create TODO](#-create-todo)
+   - [📋 Get TODO List](#-get-todo-list)
+   - [🔍 Get Single TODO](#-get-single-todo)
+   - [✏️ Update TODO](#-update-todo)
+   - [🗑️ Delete TODO](#-delete-todo)
+   - [🗑️ Delete All TODOs](#-delete-all-todos)
 
+---
+
+## 🚀 Installation & Setup
+
+### ⚡ Prerequisites
 - **Node.js** and **npm** installed on your machine
 - A **MongoDB** database (or any other database) for storing user and to-do data
 
-### Steps
+### 📥 Steps
 
-1. **Clone the Repository**  
-   Clone the project to your local machine:
+1️⃣ **Clone the Repository**
+```bash
+git clone https://github.com/your-username/todo-api.git
+```
 
-   ```bash
-   git clone https://github.com/your-username/todo-api.git
-   ```
+2️⃣ **Install Dependencies**
+```bash
+npm install
+```
 
-2. **Install Dependencies**  
-   Clone the project to your local machine:
+3️⃣ **Configure Environment Variables**
+Create a `.env` file in the root directory and set the following variables:
+```bash
+PORT=3000
+JWT_KEY=your_JWT_KEY
+DB_URL=your_mongodb_url
+```
 
-   ```bash
-       npm install
-   ```
+4️⃣ **Run the Application**
+```bash
+npm start
+```
 
-3. **Environment Variables**  
-   Create a .env file in the root of the project and set the following environment variables:
+5️⃣ **Access the API**
+```bash
+http://localhost:3000/todos
+```
 
-   ```bash
-      PORT=3000
-      JWT_KEY=your_JWT_KEY
-      DB_URL=your_mongodb_url
-   ```
+---
 
-4. **Run the Application**  
-   Start the development server:
+## 🔐 Authentication
 
-   ```bash
-      npm start
-   ```
-
-5. **Access API**  
-   The API will be running at:
-
-   ```bash
-     http://localhost:3000/todos
-   ```
-
-## Authentication
-
-### Register
-
-- Endpoint: POST /api/auth/regis
-- Description: Registers a new user.
-
-  Request Body :
-  ```bash
-     {
-        "email": "<example@example.com>",
-        "password": "password123"
-     }
-
+### 📝 Register
+- **Endpoint:** `POST /api/auth/register`
+- **Description:** Registers a new user.
+- **Request Body:**
+```json
+{
+    "email": "example@example.com",
+    "password": "password123"
+}
+```
+- **Response:**
+  - ✅ `201 Created`
+  ```json
+  {
+      "message": "Successfully registered"
+  }
+  ```
+  - ❌ `400 Bad Request`
+  ```json
+  {
+      "message": "Email already registered"
+  }
   ```
 
-  Response Body :
-  - Status Code : 201
-  ```bash
-    {
-        message: "berhasil register"
-    }
+### 🔑 Login
+- **Endpoint:** `POST /api/auth/login`
+- **Description:** Logs in a user.
+- **Request Body:**
+```json
+{
+    "email": "example@example.com",
+    "password": "password123"
+}
+```
+- **Response:**
+  - ✅ `200 OK`
+  ```json
+  {
+      "message": "Successfully logged in"
+  }
+  ```
+  - ❌ `404 Not Found`
+  ```json
+  {
+      "message": "Email not registered"
+  }
+  ```
+  - ❌ `401 Unauthorized`
+  ```json
+  {
+      "message": "Incorrect password"
+  }
   ```
 
-  Error Response :
-    - Status Code : 400
-  ```bash
-    {
-        "message": "Email sudah terdaftar"
-    }
+---
+
+## ✅ TODO Management
+
+### 📋 Get TODO List
+- **Endpoint:** `GET /api/todos`
+- **Description:** Retrieve all to-do items.
+- **Response:**
+  ```json
+  {
+      "message": "Todos retrieved successfully",
+      "data": []
+  }
   ```
 
-### Login
-
-- Endpoint: POST /api/auth/login
-- Description: Login 
-
-  Request Body :
-
-  ```bash
-     {
-        "email": "<example@example.com>",
-        "password": "password123"
-     }
-
+### ➕ Create TODO
+- **Endpoint:** `POST /api/todos`
+- **Description:** Create a new to-do item.
+- **Request Body:**
+```json
+{
+    "title": "Task title",
+    "description": "Task description",
+    "completed": false  
+}
+```
+- **Response:**
+  ```json
+  {
+      "message": "Todo added successfully"
+  }
   ```
 
-  Response Body :
-  - Status Code : 201
-
-  ```bash
-    {
-        message: "berhasil Login"
-    }
+### 🔍 Get Single TODO
+- **Endpoint:** `GET /api/todos/{id}`
+- **Description:** Retrieve a single to-do item.
+- **Response:**
+  - ✅ `200 OK`
+  ```json
+  {
+      "message": "Todo found",
+      "data": {}
+  }
+  ```
+  - ❌ `404 Not Found`
+  ```json
+  {
+      "message": "Todo not found"
+  }
   ```
 
-  Error Response :
-  - Status Code : 404
-
-  ```bash
-    {
-        "message": "tidak ada email yg didaftarkan"
-    }
+### ✏️ Update TODO
+- **Endpoint:** `PUT /api/todos/{id}`
+- **Description:** Update an existing to-do item.
+- **Request Body:**
+```json
+{
+    "title": "Updated title",
+    "description": "Updated description",
+    "completed": true
+}
+```
+- **Response:**
+  - ✅ `200 OK`
+  ```json
+  {
+      "message": "Todo updated successfully",
+      "data": {}
+  }
+  ```
+  - ❌ `404 Not Found`
+  ```json
+  {
+      "message": "Todo not found"
+  }
   ```
 
-  - Status Code : 401
-
-  ```bash
-    {
-        "message": "password yg diberikan salah"
-    }
+### 🗑️ Delete TODO
+- **Endpoint:** `DELETE /api/todos/{id}`
+- **Description:** Delete a specific to-do item.
+- **Response:**
+  - ✅ `200 OK`
+  ```json
+  {
+      "message": "Todo deleted successfully"
+  }
+  ```
+  - ❌ `404 Not Found`
+  ```json
+  {
+      "message": "Todo not found"
+  }
   ```
 
-## TODO
-
-
-### Get TO-DO List
-
-- Endpoint: GET /api/todos
-- Description: get all data todo
-
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-          "message": "Data berhasil ditemukan",
-          "data":[]
-    }
+### 🗑️ Delete All TODOs
+- **Endpoint:** `DELETE /api/todos`
+- **Description:** Delete all to-do items.
+- **Response:**
+  ```json
+  {
+      "message": "All todos deleted successfully"
+  }
   ```
 
-### Create To-Do
 
-- Endpoint: POST /api/todos
-- Description: create 1 data todo
-
-  Request Body :
-
-  ```bash
-     {
-        "title": "lorem ipsum",
-        "description": "lorem ipsum",
-        "completed":false  
-    }
-  ```
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-          "message": "Data berhasil ditambahkan"
-    }
-  ```
-
-### Get Single TO-DO
-
-- Endpoint: GET /api/todos/{id}
-- Description: get single data
-
-  Request Body :
-
-  ```bash
-     {
-        "email": "<example@example.com>",
-        "password": "password123"
-     }
-
-  ```
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-       message: "1 Data todo berhasil ditemukan",
-       data:{}
-    }
-  ```
-
-  Error Response :
-  - Status Code : 404
-
-  ```bash
-    {
-         message: "Data tidak ditemukan"
-    }
-  ```
-
-  - Status Code : 500
-
-  ```bash
-    {
-        message: "Terjadi kesalahan saat menghapus data",
-        error:""
-    }
-  ```
-
-### Update TO-DO
-
-- Endpoint: PUT /api/todos/{id}
-- Description: edit 1 data
-
-  Request Body :
-
-  ```bash
-    {
-      "title": "lorem ipsum",
-      "description": "lorem ipsum",
-      "completed":true
-    }
-
-  ```
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-       message: "Data berhasil diubah",
-       data:{}
-    }
-  ```
-
-  Error Response :
-  - Status Code : 404
-
-  ```bash
-    {
-        message: "Data tidak ditemukan"
-    }
-  ```
-
-  - Status Code : 500
-
-  ```bash
-    {
-        message: "Terjadi kesalahan saat menghapus data",
-        error:""
-    }
-  ```
-
-### Delete TO-DO
-
-- Endpoint: DEL /api/todos/{id}
-- Description: delete 1 data
-
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-        message: "Data berhasil dihapus"
-    }
-  ```
-
-  Error Response :
-  - Status Code : 404
-
-  ```bash
-    {
-        message: "Data tidak ditemukan"
-    }
-  ```
-
-  - Status Code : 500
-
-  ```bash
-    {
-        message: "Terjadi kesalahan saat menghapus data",
-        error:""
-    }
-  ```
-
-### Delete ALL TO-DO
-
-- Endpoint: DEL /api/todos
-- Description: delete all data
-
-  Response Body :
-  - Status Code : 200
-
-  ```bash
-    {
-       message: "Semua data todo berhasil dihapus"
-    }
-  ```
