--- a/readme
+++ b/readme
@@ -28,17 +28,17 @@ A RESTful API built with **Node.js** and **Express.js** that provides user authe
 
 ### 📥 Steps
 
-1️⃣ **Clone the Repository**
+#### 1️⃣ Clone the Repository
 ```bash
 git clone https://github.com/your-username/todo-api.git
 ```
 
-2️⃣ **Install Dependencies**
+#### 2️⃣ Install Dependencies
 ```bash
 npm install
 ```
 
-3️⃣ **Configure Environment Variables**
+#### 3️⃣ Configure Environment Variables
 Create a `.env` file in the root directory and set the following variables:
 ```bash
 PORT=3000
@@ -46,12 +46,12 @@ JWT_KEY=your_JWT_KEY
 DB_URL=your_mongodb_url
 ```
 
-4️⃣ **Run the Application**
+#### 4️⃣ Run the Application
 ```bash
 npm start
 ```
 
-5️⃣ **Access the API**
+#### 5️⃣ Access the API
 ```bash
 http://localhost:3000/todos
 ```
@@ -218,4 +218,7 @@ http://localhost:3000/todos
   }
   ```
 
+---
 
+## 📌 Conclusion
+This API provides a simple yet effective task management system with secure user authentication. Feel free to contribute or expand upon this project! 🚀
